# ispent-server

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml
app/: main.py
app/routers/: users.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
migrations/: env.py
migrations/versions/: 0e6dde82328b_confirm_table.py  0f0b0e360491_confirm_table.py  1f015459ed57_defautl_date.py  23c49a57bd78_pass2.py  5563bff71156_added_filed_comment.py  5a42422d975c_email_user.py  70efce8d64e6_initial_models.py  8154a2d49695_timezone.py  816252f76c81_user_table.py  858ecb90ade3_pass.py  937ea0ebb199_added_color_icon_category_user.py  a7d1afa41119_init.py  acb2fddf50a6_initial_models.py  b9fd6b423d00_init.py  bfb203c5b592_initial.py  cd25825fc80f_init.py  dc2860c11c12_initial.py  ddf6b6b6150c_init.py  e27f10ecae55_id_telegram_remove_nullable.py  f85b76651091_initial.py  ff47ce75ce09_confirm_table.py
src/: config.py  database.py  main.py
src/api/v1/: __init__.py  router.py
src/core/: app.py  config.py  database.py  schemas.py
src/core/templates/: confirm_email.html
src/operation/: __init__.py  models.py  router.py  schemas.py  service.py
src/operation/enum/: __init__.py  kind_operation_enum.py
src/operation/models/: __init__.py  category_user.py  operation.py
src/operation/schemas/: __init__.py  category.py  operation.py
src/operation/services/: __init__.py  checking_uniqueness_category_user.py  (+16 more)
src/user/: __init__.py  auth.py  manager.py  models.py  router.py  schemas.py  service.py
(+28 files in other folders)
